test/corpus/basic.txt
===
invalid macros
===
{{ foo("foo", "bar) }} foobar
---

(doc
  (ERROR
    (ident)
    (string
      (double_quoted_string))))

===
invalid ident
===
{{ foo#bar }} foobar
---

(doc
  (macro_tag
    (ident)
    (ERROR
      (UNEXPECTED '#')
      (ident)))
  (text))

===
valid ident
===
{{foo}}
---

(doc
  (macro_tag
    (ident)))

===
valid ident and int arg
===
{{bar(1)}}
---

(doc
  (macro_tag
    (ident)
    (args
      (int))))

===
valid ident and string arg
===
{{bar(1, '2', "foo")}}
---

(doc
  (macro_tag
    (ident)
    (args
      (int)
      (string
        (single_quoted_string))
      (string
        (double_quoted_string)))))

===
expect_missing flag, no args
===
{{_foo}}
---

(doc
  (macro_tag
    (expect_missing)
    (ident)))

===
expect_missing flag with args
===
{{_cssxref("foo")}}
---

(doc
  (macro_tag
    (expect_missing)
    (ident)
    (args
      (string
        (double_quoted_string)))))
